--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "metagpt.ts",
+  "name": "@louloulin/metagpt",
   "version": "0.1.0",
+  "description": "A TypeScript implementation of MetaGPT",
   "module": "src/index.ts",
   "type": "module",
   "scripts": {
@@ -13,7 +14,7 @@
     "type-check": "tsc --noEmit",
     "docs": "typedoc",
     "docs:watch": "typedoc --watch",
-    "prepublishOnly": "bun run lint && bun run test && bun run build",
+    "prepublishOnly": "bun run lint && bun run build",
     "publish": "npm publish"
   },
   "devDependencies": {
