--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@louloulin/metagpt",
-  "version": "0.1.0",
+  "name": "@louloulinx/metagpt",
+  "version": "0.1.3",
   "description": "A TypeScript implementation of MetaGPT",
   "module": "src/index.ts",
   "type": "module",
