--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "bun run --watch src/index.ts",
     "start": "bun run src/index.ts",
     "build": "bun build ./src/index.ts --outdir ./dist",
-    "test": "bun test",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
     "type-check": "tsc --noEmit",
@@ -28,7 +29,8 @@
     "eslint": "^9.21.0",
     "prettier": "^3.5.2",
     "typedoc": "0.27.9",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vitest": "^3.0.7"
   },
   "peerDependencies": {
     "typescript": "^5.7.3"
