--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@typescript-eslint/parser": "8.25.0",
     "bun-types": "latest",
     "eslint": "^9.21.0",
+    "memfs": "^4.17.0",
     "prettier": "^3.5.2",
     "typedoc": "0.27.9",
     "typescript": "^5.7.3",
