--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,9 @@
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
+    "noPropertyAccessFromIndexSignature": false,
+
+    // Add types for testing
+    "types": ["vitest/globals"]
   }
 }
